--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "xss": "^1.0.15"
   }
 }
