--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm run build:frontend",
+    "build:frontend": "rm -rf public && cp -r improved-website-v14 public",
+    "serve:frontend": "npx serve public",
+    "serve:backend": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "helmet": "^8.1.0",
